--- a/applications/DECA/optimize_latent_space.ipynb
+++ b/applications/DECA/optimize_latent_space.ipynb
@@ -2,143 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os, sys\n",
-    "sys.path += [\"../..\"]\n",
-    "sys.path += [\"../../..\"]\n",
-    "import torch\n",
-    "import torch.functional as F\n",
-    "from applications.DECA.interactive_deca_decoder import load_deca_and_data, test, plot_results\n",
-    "from applications.DECA.optimize_latent_space import TargetEmotionCriterion, optimize\n",
-    "import copy\n",
-    "from layers.losses.EmoNetLoss import EmoNetLoss\n",
-    "from models.DECA import DecaModule, DECA, DecaMode\n",
-    "from skimage.io import imread\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading the EmoNet model from /home/rdanecek/Workspace/Repos/emonet/pretrained/emonet_8.pth.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rdanecek/anaconda3/envs/work/lib/python3.6/site-packages/torch/nn/functional.py:3063: UserWarning: Default upsampling behavior when mode=bilinear is changed to align_corners=False since 0.4.0. Please specify align_corners=True if the old behavior is desired. See the documentation of nn.Upsample for details.\n",
-      "  \"See the documentation of nn.Upsample for details.\".format(mode))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking for checkpoint in '/home/rdanecek/Workspace/mount/scratch/rdanecek/emoca/finetune_deca/2021_03_08_22-30-55_VA_Set_videos_Train_Set_119-30-848x480.mp4CoPhotoCoLMK_IDW-0.15_Aug_early/detail/checkpoints'\n",
-      "Found 4 checkpoints\n",
-      " - /home/rdanecek/Workspace/mount/scratch/rdanecek/emoca/finetune_deca/2021_03_08_22-30-55_VA_Set_videos_Train_Set_119-30-848x480.mp4CoPhotoCoLMK_IDW-0.15_Aug_early/detail/checkpoints/deca-epoch=14-val_loss=0.9390.ckpt\n",
-      " - /home/rdanecek/Workspace/mount/scratch/rdanecek/emoca/finetune_deca/2021_03_08_22-30-55_VA_Set_videos_Train_Set_119-30-848x480.mp4CoPhotoCoLMK_IDW-0.15_Aug_early/detail/checkpoints/deca-epoch=17-val_loss=0.9394.ckpt\n",
-      " - /home/rdanecek/Workspace/mount/scratch/rdanecek/emoca/finetune_deca/2021_03_08_22-30-55_VA_Set_videos_Train_Set_119-30-848x480.mp4CoPhotoCoLMK_IDW-0.15_Aug_early/detail/checkpoints/deca-epoch=19-val_loss=0.9407.ckpt\n",
-      " - /home/rdanecek/Workspace/mount/scratch/rdanecek/emoca/finetune_deca/2021_03_08_22-30-55_VA_Set_videos_Train_Set_119-30-848x480.mp4CoPhotoCoLMK_IDW-0.15_Aug_early/detail/checkpoints/last.ckpt\n",
-      "Loading checkpoint '/home/rdanecek/Workspace/mount/scratch/rdanecek/emoca/finetune_deca/2021_03_08_22-30-55_VA_Set_videos_Train_Set_119-30-848x480.mp4CoPhotoCoLMK_IDW-0.15_Aug_early/detail/checkpoints/deca-epoch=14-val_loss=0.9390.ckpt'\n",
-      "fc.weight  not available in reconstructed resnet\n",
-      "fc.bias  not available in reconstructed resnet\n",
-      "copy resnet state dict finished!\n",
-      "creating the FLAME Decoder\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "../../models/DecaFLAME.py:92: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(lmk_embeddings['dynamic_lmk_faces_idx'], dtype=torch.long))\n",
-      "../../models/DecaFLAME.py:94: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(lmk_embeddings['dynamic_lmk_bary_coords'], dtype=self.dtype))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fc.weight  not available in reconstructed resnet\n",
-      "fc.bias  not available in reconstructed resnet\n",
-      "copy resnet state dict finished!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rdanecek/anaconda3/envs/work/lib/python3.6/site-packages/pytorch3d/io/obj_io.py:457: UserWarning: Mtl file does not exist: /home/rdanecek/Workspace/mount/scratch/yfeng/Data/FLAME/geometry/template.mtl\n",
-      "  warnings.warn(f\"Mtl file does not exist: {f}\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading the EmoNet model from /home/rdanecek/Workspace/Repos/emonet/pretrained/emonet_8.pth.\n",
-      "DECA MODE RECONFIGURED TO: DecaMode.DETAIL\n",
-      "DECA loaded\n",
-      "The data will be loaded from: '/home/rdanecek/Workspace/mount/scratch/rdanecek/data/aff-wild2'\n",
-      "The dataset is already processed. Loading\n",
-      "Loading metadata of FaceVideoDataset from: '/home/rdanecek/Workspace/mount/scratch/rdanecek/data/aff-wild2/processed/processed_2021_Jan_19_20-25-10/metadata.pkl'\n",
-      "Loading the dataset\n",
-      "FaceVideoDataset already loaded.\n",
-      "Dataset loaded\n",
-      "Looking for video 148 in 477\n",
-      "The dataset is already processed. Loading\n",
-      "FaceVideoDataset already loaded.\n",
-      "Loading the dataset\n",
-      "FaceVideoDataset already loaded.\n",
-      "Dataset loaded\n",
-      "Found processed filelists in '/home/rdanecek/Workspace/mount/scratch/rdanecek/data/aff-wild2/processed/processed_2021_Jan_19_20-25-10/cache/47c56b8af9dcf6b425af013417cc6450'. Reprocessing will not be needed. Loading ...\n",
-      "Loading done\n",
-      "Dataset split found in: '/home/rdanecek/Workspace/mount/scratch/rdanecek/data/aff-wild2/processed/processed_2021_Jan_19_20-25-10/cache/tmp/07466c8e43171698637e87f596aeec86'. Loading ...\n",
-      "Loading done\n",
-      "Found processed filelists in '/home/rdanecek/Workspace/mount/scratch/rdanecek/data/aff-wild2/processed/processed_2021_Jan_19_20-25-10/cache/47c56b8af9dcf6b425af013417cc6450'. Reprocessing will not be needed. Loading ...\n",
-      "Loading done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/rdanecek/anaconda3/envs/work/lib/python3.6/site-packages/torch/nn/functional.py:3385: UserWarning: Default grid_sample and affine_grid behavior has changed to align_corners=False since 1.3.0. Please specify align_corners=True if the old behavior is desired. See the documentation of grid_sample for details.\n",
-      "  warnings.warn(\"Default grid_sample and affine_grid behavior has changed \"\n"
+      "a\n"
      ]
     }
    ],
    "source": [
-    "target_image = \"~/Workspace/mount/scratch/rdanecek/data/aff-wild2/processed/processed_2021_Jan_19_20-25-10/VA_Set/\" \\\n",
-    "               \"detections/Train_Set/82-25-854x480/002400_000.png\"\n",
-    "loss_to_use = TargetEmotionCriterion(target_image)\n",
-    "path_to_models = '/home/rdanecek/Workspace/mount/scratch/rdanecek/emoca/finetune_deca'\n",
-    "# run_name = '2021_03_01_11-31-57_VA_Set_videos_Train_Set_119-30-848x480.mp4_EmoNetLossB_F1F2VAECw-0.00150_CoSegmentGT_DeSegmentRend'\n",
-    "run_name = '2021_03_08_22-30-55_VA_Set_videos_Train_Set_119-30-848x480.mp4CoPhotoCoLMK_IDW-0.15_Aug_early'\n",
-    "stage = 'detail'\n",
-    "relative_to_path = '/ps/scratch/'\n",
-    "replace_root_path = '/home/rdanecek/Workspace/mount/scratch/'\n",
-    "deca, dm = load_deca_and_data(path_to_models, run_name, stage, relative_to_path, replace_root_path)\n",
-    "deca.deca.config.train_coarse = True\n",
-    "deca.deca.config.mode = DecaMode.DETAIL\n",
-    "# deca.deca.config.mode = DecaMode.COARSE\n",
-    "image_index = 390 * 4 + 1\n",
-    "values, visdict = test(deca, dm, image_index)\n"
+    "print(\"a\")\n",
+    "import os, sys\n",
+    "sys.path += [\"../..\"]\n",
+    "sys.path += [\"../../..\"]\n",
+    "from omegaconf import OmegaConf, DictConfig\n",
+    "from pathlib import Path\n",
+    "from models.DECA import DecaModule\n",
+    "from applications.DECA.train_deca_modular import find_latest_checkpoint\n",
+    "from applications.DECA.test_and_finetune_deca import prepare_data\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "from applications.DECA.interactive_deca_decoder import hack_paths, load_deca_and_data, test, plot_results"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -223,9 +118,14 @@
     }
    ],
    "source": [
-    "print(values.keys())\n",
-    "plot_results(visdict, \"title\")\n",
-    "optimize(deca, values, loss_to_use=loss_to_use)"
+    "path_to_models = '/home/rdanecek/Workspace/mount/scratch/rdanecek/emoca/finetune_deca'\n",
+    "# run_name = '2021_03_01_11-31-57_VA_Set_videos_Train_Set_119-30-848x480.mp4_EmoNetLossB_F1F2VAECw-0.00150_CoSegmentGT_DeSegmentRend'\n",
+    "run_name =  '2021_03_01_11-31-57_VA_Set_videos_Train_Set_119-30-848x480.mp4_EmoNetLossB_F1F2VAECw-0.00150_CoSegmentGT_DeSegmentRend'\n",
+    "stage = 'coarse'\n",
+    "plot_mode = stage == 'detail'\n",
+    "relative_to_path = '/ps/scratch/'\n",
+    "replace_root_path = '/home/rdanecek/Workspace/mount/scratch/'\n",
+    "deca, dm = load_deca_and_data(path_to_models, run_name, stage, relative_to_path, replace_root_path, -3)"
    ]
   },
   {
